# image-to-ascii

./: .gitignore  CMakeLists.txt  README.md
include/: ascii.h  image.h
saved_ascii_art/: cat_ascii.txt  ferrari_ascii.txt  parrot_ascii.txt
src/: convolution.c  grayscale.c  main.c
